murmur didn't like that list path

--- a/skelconfig/murmur.ini
+++ b/skelconfig/murmur.ini
@@ -13,7 +13,7 @@
 
 # Path to database. If blank, will search for
 # murmur.sqlite in default locations or create it if not found.
-database=/minecraft/host/otherdata
+database=/minecraft/host/otherdata/murmur.sqlite
 
 # If you wish to use something other than SQLite, you'll need to set the name
 # of the database above, and also uncomment the below.
