how about this?

--- a/skelconfig/server.properties
+++ b/skelconfig/server.properties
@@ -34,6 +34,6 @@ online-mode=true
 max-build-height=256
 level-seed=
 use-native-transport=true
-motd=A Minecraft Server
+motd=A Minecraft Server - wrapped by littlepod
 enable-rcon=true
 rcon.password=babybee
