--- a/skelconfig/server.yaml
+++ b/skelconfig/server.yaml
@@ -2,6 +2,11 @@
 
 URL: "web-hostname"
 name: "name of your server"
+slackadminchan: "ID"
+slackadminusers: 
+    - "me"
+
+slackchan: ""
 
 # These should stay unless you know what you're doing
 mcdata: "/minecraft/host/mcdata"
