this is getting annoying

--- a/skelconfig/nginx.conf
+++ b/skelconfig/nginx.conf
@@ -1,6 +1,7 @@
-
+daemon off;
 pid /tmp/nginx.pid;
-      error_log /minecraft/host/otherdata/logs/error.log;
+error_log /minecraft/host/otherdata/logs/error.log;
+
 events {
   worker_connections   2000;
     # use [ kqueue | rtsig | epoll | /dev/poll | select | poll ] ;
@@ -16,10 +17,8 @@ http {
 
   server {
       listen 8080 default_server;
-      server_name _; # This is just an invalid value which will never trigger on a real hostname.
       access_log /minecraft/host/otherdata/logs/default.access.log;
       error_log /minecraft/host/otherdata/logs/default.error.log;
-      server_name_in_redirect off;
       root  /minecraft/host/webdata;
       }
 }
