can't forget this too

--- a/skelconfig/nginx.conf
+++ b/skelconfig/nginx.conf
@@ -1,5 +1,5 @@
 daemon off;
-pid /tmp/nginx.pid;
+pid /minecraft/minecraft-nginx.sh.pid;
 error_log /minecraft/host/otherdata/logs/error.log;
 
 events {
