--- a/skelconfig/server.yaml
+++ b/skelconfig/server.yaml
@@ -2,7 +2,7 @@
 
 URL: "web-hostname"
 name: "name of your server"
-mcversion: "1.9.2"
+mcversion: "1.11.2"
 
 discordChannel: "143000115144032265"
 discordPrivChannel: "168043067285307392"
@@ -20,6 +20,8 @@ minecraftname: "putsomethinghere"
 twitter: "putsomethinghere"
 
 twitchircpass: ""
+
+tweet: false
 
 ConsumerKey: ""
 ConsumerSecret: ""
