--- a/skelconfig/server.yaml
+++ b/skelconfig/server.yaml
@@ -3,6 +3,7 @@
 URL: "web-hostname"
 name: "name of your server"
 mcversion: "1.12"
+updateRoles: false
 
 discordChannel: "143000115144032265"
 discordPrivChannel: "168043067285307392"
