allows configuring the server via the env file on

--- a/server.properties
+++ b/server.properties
@@ -35,6 +35,9 @@ max-build-height=256
 level-seed=
 use-native-transport=true
 spawn-protection=0
-motd=$SERVERNAME
-
-
+motd=
+enable-rcon=false
+enable-query=false
+enable-command-block=false
+prevent-proxy-connections=false
+enforce-whitelist=true
