--- a/server.properties
+++ b/server.properties
@@ -36,8 +36,9 @@ level-seed=
 use-native-transport=true
 spawn-protection=0
 motd=
-enable-rcon=false
+enable-rcon=true
 enable-query=false
 enable-command-block=false
 prevent-proxy-connections=false
 enforce-whitelist=true
+rcon.password=secret
