added jolokia agent and related config in prep for 1.16

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
 #Sat Dec 19 09:51:55 UTC 2015
+enable-jmx-monitoring=true
 max-tick-time=60000
 generator-settings=
 allow-nether=true
